[[bin]]
name = "recently-read-book"
path = "src/main.rs"

[package]
name = "recently-read-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
once_cell = "1.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"